# rustle

./: Cargo.toml  LICENSE  README.md
assets/: ascii_banner.txt
src/: cli.rs  commands.rs  data_generator.rs  extract.rs  lib.rs  load.rs  main.rs  transform.rs
src/commands/: bootstrap.rs  dispatch.rs  generate.rs  run.rs
src/extract/: csv_reader.rs  init.rs  ndjson_reader.rs
src/load/: init.rs  sqlite_batch_writer.rs  sqlite_writer.rs
src/transform/: init.rs  spawn_workers.rs  transform.rs
