[package]
name = "rustle"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = {version = "1.18.1", features = [ "v4" ] }
rand = "0.8"
anyhow = "1.0"

#[[bin]]
#name = "rustle-boostrap"
#path = "src/bin/boostrap.rs"
